--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,10 @@
 [build]
   functions = "netlify/functions"
 
+[functions]
+  node_bundler = "esbuild"
+
 [[redirects]]
-  from = "/api/claude"
-  to = "/.netlify/functions/claude-proxy"
+  from = "/api/stock"
+  to = "/.netlify/functions/stock-price"
   status = 200
